--- a/Previsão do Tempo/index.html
+++ b/Previsão do Tempo/index.html
@@ -12,10 +12,11 @@
         <button class="botao-busca">Ir</button>
 
         <div class="caixa-media">
-            <h2 class="cidade">Tempo em XXXXX</h2>
-            <p class="temp">XX °C</p>
+            <h2 class="cidade"></h2>
+            <p class="temp"></p>
             <div class="caixa-menor">
-                <p class="texto-previsao">XXXX</p>
+                <img id="imagem">
+                <p class="texto-previsao"></p>
             </div>
         </div>
       
